--- a/index.html
+++ b/index.html
@@ -509,6 +509,8 @@
             <input placeholder="Test" />
             <input type="checkbox" name="promotions" />
             <label for="promotions">Yes, I would like to receive more Microsoft Promotions</label>
+
+            <button type="submit">Submit</button>
           </form>
         </div>
 
@@ -517,8 +519,37 @@
         </div>
       </div>
     </div>
-
   </section>
+
+  <section class="panel learnmore">
+    <div class="columns">
+      <div class="learnmore__text">
+        <h1>Want to learn more about Office?</h1>
+        <p>Check out other courses <a href="#" target="_blank">here</a></p>
+      </div>
+
+      <div class="learnmore__img">
+        <img src="img/learnmore__ezlogo.png" />
+      </div>
+    </div>
+  </section>
+
+  <section class="panel rules">
+    <p class="rules__expander">Official Rules</p>
+    <div class="rules__content">
+      <p>To receive one (1) year Office 365 Home promo code, you must pass the Free Microsoft Office for Apple Employees course. Limit one (1) Office 365 Home promo code per user. This offer is subject to all Terms and Conditions. </p>
+      <p>Limited time offer good only to legal residents of the 50 U.S. states or D.C., age 18+, who are employed in a retail sales or support role at any Apple Retail Sales Partner authorized to participate in the U.S. Microsoft ExpertZone program. Please note that it is your responsibility to maintain an up-to-date and accurate profile in order for Microsoft to contact you.</p>
+      <p>Will get official rules from LCA</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <img src="img/hero__logos--microsoft.svg" alt="Microsoft" />
+      <p>Footer copy</p>
+    </div>
+  </footer>
+
 
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
