re-styling, notes added to main.js for JSON string request from client

--- a/index.html
+++ b/index.html
@@ -169,152 +169,7 @@
     <div class="clear full no__margin tabs">
       <input type="radio" name="platform" id="tab__windows" checked="checked">
       <input type="radio" name="platform" id="tab__mac">
-      <label class="platform label__windows" for="tab__windows">
-        Windows
-        <div></div>
-      </label>
-      <label class="platform label__mac" for="tab__mac">
-        Mac
-        <div></div>
-      </label>
-      <div id="tab__windows--div" class="full tab">
-        
 
-        <div class="products__container">
-          <input type="radio" name="products" id="tab__1" checked="checked">
-          <input type="radio" name="products" id="tab__2">
-          <input type="radio" name="products" id="tab__4">
-          <input type="radio" name="products" id="tab__5">
-          <input type="radio" name="products" id="tab__6">
-
-          <div class="products__labels">
-            <label id="label__tab--1" for="tab__1" class="products active-windows products-windows first active">
-              <img class="active" src="img/compare/365/gallery__thumb--box-home.jpg" />
-            </label>
-
-            <label id="label__tab--2" for="tab__2" class="products products-windows">
-              <img class="inactive" src="img/compare/365/gallery__thumb--box-personal.jpg" />
-            </label>
-
-
-
-            <label id="label__tab--4" for="tab__4" class="products products-windows">
-              <img class="inactive" src="img/compare/2016-windows/gallery__thumb--box-homebusiness.jpg" />
-            </label>
-
-            <label id="label__tab--5" for="tab__5" class="products products-windows">
-              <img class="inactive" src="img/compare/2016-windows/gallery__thumb--box-homestudent.jpg" />
-            </label>
-
-            <label id="label__tab--6" for="tab__6" class="products products-windows">
-              <img style="margin-left: 5px;" class="inactive" src="img/compare/2016-windows/gallery__thumb--box-professional.jpg" />
-            </label>
-            <div style="clear:both;"></div>
-          </div>
-
-          <div class="products__info--container">
-
-            <div id="tab__1--div" class="products__info wire__bare">
-              <div class="half">
-                <h3>Office 365 Home Subscription</h3>
-                <h5 class="user__text">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  &nbsp;5 users&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br class="mobilefix89" />1-year subscription</h5>
-                <p class="user__text">A 1-year household subscription to install Office 365 on up to 5 PCs and/or Macs plus 5 tablets (Windows tablets, or iPads or Android tablets) and smartphones. Comes with all the Office apps including Outlook, plus exclusive Office 365 benefits.</p>
-              </div>
-              <div class="flex__center half fix99">
-                <a class="a__red product__a" href="#!">Buy now</a>
-              </div>
-              <div class="full products__margin"></div>
-              <div class="full full-icons">
-                <img class="lg" src="img/365/icons__home-large.svg">
-                <img class="md" src="img/365/icons__home-medium.svg">
-              </div>
-            </div>
-
-            <div id="tab__2--div" class="products__info wire__bare">
-              <div class="half">
-                <h3>Office 365 Personal Subscription</h3>
-                <h5 class="user__text">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  &nbsp;1 user&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br class="mobilefix89" />1-year subscription</h5>
-                <p class="user__text">A 1-year subscription to install Office on 1 PC or Mac plus 1 tablet (Windows tablet, or iPad or Android tablet) and smartphone. Includes all the Office apps including Outlook, plus exclusive Office 365 benefits.</p>
-              </div>
-              <div class="flex__center half fix99">
-                <a class="a__red product__a" href="#!">Buy now</a>
-              </div>
-              <div class="full products__margin"></div>
-              <div class="full full-icons">
-                <img class="lg" src="img/365/icons__personal-large.svg">
-                <img class="md" src="img/365/icons__personal-medium.svg">
-              </div>
-            </div>
-
-            <div id="tab__4--div" class="products__info wire__bare">
-              <div class="half">
-                <h3>Office 2016 Home &amp; Business</h3>
-                <h5 class="user__text">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  &nbsp;1 PC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br class="mobilefix89" />1-time purchase</h5>
-                <p class="user__text">For users who want to install Word, Excel, PowerPoint, and Outlook on 1 PC. Save your documents to OneDrive, so you can access them when and where you want them.</p>
-              </div>
-              <div class="flex__center half fix99">
-                <a class="a__red product__a" href="#!">Buy now</a>
-              </div>
-              <div class="full products__margin"></div>
-              <div class="full full-icons">
-                <img class="lg" src="img/2016-pc/icons__homeBusiness-large.svg">
-                <img class="md" src="img/2016-pc/icons__homeBusiness-medium.svg">
-              </div>
-            </div>
-
-            <div id="tab__5--div" class="products__info wire__bare">
-              <div class="half">
-                <h3>Office 2016 Home &amp; Student</h3>
-                <h5 class="user__text">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  &nbsp;1 PC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br class="mobilefix89" />1-time purchase</h5>
-                <p class="user__text">For home users who want to install Word, Excel, PowerPoint, and OneNote on 1 Windows 7 or later PC. Save your documents to OneDrive, so you can access them when and where you want them.</p>
-              </div>
-              <div class="flex__center half fix99">
-                <a class="a__red product__a" href="#!">Buy now</a>
-              </div>
-              <div class="full products__margin"></div>
-              <div class="full full-icons">
-                <img class="lg" src="img/2016-pc/icons__homeStudent-large.svg">
-                <img class="md" src="img/2016-pc/icons__homeStudent-medium.svg">
-              </div>
-            </div>
-
-            <div id="tab__6--div" class="products__info wire__bare">
-              <div class="half">
-                <h3>Office 2016 Professional</h3>
-                <h5 class="user__text">
-                  <img class="icon" src="img/user.svg" alt="User">
-                  &nbsp;1 PC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br class="mobilefix89" />1-time purchase</h5>
-                <p class="user__text">Do your best work – anywhere, anytime, and with anyone. In addition to the core Office apps, you get Publisher and Access. And with your documents stored on OneDrive, collaborating is a breeze.</p>
-              </div>
-              <div class="flex__center half fix99">
-                <a class="a__red product__a" href="#!">Buy now</a>
-              </div>
-              <div class="full products__margin"></div>
-              <div class="full full-icons">
-                <img class="lg" src="img/2016-pc/icons__professional-large.svg">
-                <img class="md" src="img/2016-pc/icons__professional-medium.svg">
-              </div>
-            </div>
-            <div style="clear:both;"></div>
-
-          </div>
-
-        </div>
-
-
-      </div>
       <div id="tab__mac--div" class="full tab">
 
 
@@ -438,6 +293,7 @@
     </div>
 
     <form id="question-form">
+      <!-- Question 1 -->
       <div class="quiz__question quiz__question-1">
         <div class="quiz__question--content">
           <p class="number">1</p>
@@ -456,17 +312,19 @@
               <span>Submit to check the answer</span>
             </div>
 
-            
+
+            <div clas="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
 
+      <!-- Question 2 -->
       <div class="quiz__question quiz__question-2">
         <div class="quiz__question--content">
           <p class="number">2</p>
 
           <div class="quiz__question--content">
-            <p class="question">Which of the following is a new feature in Office 2016 for Mac?</p>
+            <p class="question">Office 365 can be used on which of the following devices? (Select all that apply)</p>
             <ul>
               <li><input type="checkbox" name="usedOnWhichDevices" value="Mac" />       Mac</li>
               <li><input type="checkbox" name="usedOnWhichDevices" value="iPad" />      iPad</li>
@@ -479,17 +337,18 @@
               <span>Submit to check the answer</span>
             </div>
 
-            <div clas="quiz__question--answer">Answer</div>
+             <div clas="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
 
+      <!-- Question 3 -->
       <div class="quiz__question quiz__question-3">
         <div class="quiz__question--content">
           <p class="number">3</p>
 
           <div class="quiz__question--content">
-            <p class="question">Office 365 can be used on which of the following devices? (Select all that apply)</p>
+            <p class="question">Office 365 Home is great choice for the whole family and may be installed on up to 5 Macs/PC and 5 iPads/tablets. </p>
             <ul>
               <li><input type="radio" name="greatChoice" value="True" />                True</li>
               <li><input type="radio" name="greatChoice" value="False" />               False</li>
@@ -499,14 +358,17 @@
               <button class="question__submit question__submit--3">Submit</button>
               <span>Submit to check the answer</span>
             </div>
+
+             <div clas="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
     </form>
 
+    <!-- Submit form -->
     <div class="quiz__answer quiz__question">
       <div class="quiz__answer--statement">
-        <h1>Office 365 Home is great choice for the whole family and may be installed on up to 5 Macs/PC and 5 iPads/tablets.  <em>Submit</em></h1>
+        <h1>You’re almost done! Just fill out the form below and click <em>Submit</em></h1>
       </div>
       <div class="quiz__answer--content columns">
         <div class="quiz__answer--content-form columns__2x">
