serialize data to object

--- a/index.html
+++ b/index.html
@@ -374,11 +374,11 @@
         <div class="quiz__answer--content-form columns__2x">
           <h1>Personal Information</h1>
           <form id="contact-form">
-            <input placeholder="First name" />
-            <input placeholder="Last name" />
-            <input placeholder="Email address" />
-            <input placeholder="Company" />
-            <input placeholder="Store number" />
+            <input type="text" name="first" placeholder="First name" />
+            <input type="text" name="last" placeholder="Last name" />
+            <input type="email" name="email" placeholder="Email address" />
+            <input type="text" name="company" placeholder="Company" />
+            <input type="number" name="phone" placeholder="Store number" />
             <input type="checkbox" name="promotions" />
             <label for="promotions">Yes, I would like to receive more Microsoft Promotions</label>
 
