--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <input type="text" name="last" placeholder="Last name" />
             <input type="email" name="email" placeholder="Email address" />
             <input type="text" name="company" placeholder="Company" />
-            <input type="number" name="phone" placeholder="Store number" />
+            <input type="number" name="store" placeholder="Store number" />
             <input type="checkbox" name="promotions" />
             <label for="promotions">Yes, I would like to receive more Microsoft Promotions</label>
 
@@ -389,9 +389,6 @@
         <div class="quiz__answer--content-img columns__2x">
           <img src="img/quiz__box.jpg" alt="Office 365" />
         </div>
-
-        <!-- Temporary results dump -->
-        <div id="results"></div>
       </div>
     </div>
   </section>
