add display toggle for answers and contact form

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
 
 
-            <div clas="quiz__question--answer">Answer</div>
+            <div id="answer--1" class="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
@@ -337,7 +337,7 @@
               <span>Submit to check the answer</span>
             </div>
 
-             <div clas="quiz__question--answer">Answer</div>
+             <div id="answer--2" class="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
@@ -359,7 +359,7 @@
               <span>Submit to check the answer</span>
             </div>
 
-             <div clas="quiz__question--answer">Answer</div>
+             <div id="answer--3" class="quiz__question--answer">Answer</div>
           </div>
         </div>
       </div>
@@ -384,6 +384,9 @@
 
             <button type="submit">Submit</button>
           </form>
+        </div>
+        <div class="quiz__answer--form-complete">
+          <p>Hooray!</p>
         </div>
 
         <div class="quiz__answer--content-img columns__2x">
